@@ -4,6 +4,7 @@
 
 Version 1.1.1 to be released
 ----------------------------
+- Bug #738: COciColumnSchema must return 'double' if precision and scale designators of NUMBER field are absent (Qiang)
 - Bug #816: CUniqueValidator did not work with CFormModel (Qiang)
 - Bug #839: typo in CFormatter about calling method_exists() (Qiang)
 - Bug #865: CWidgetFactory didn't set the owner of the newly created widgets correctly (Qiang)
